--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,17 +12,17 @@ layout: archive
   {% assign posts = site.posts %}
 {% endif %}
 
-<div class="entries-list">
-  {% for post in posts limit:3 %}
-    {% include post-single.html %}
-  {% endfor %}
-</div>
-
-<!--{% assign entries_layout = page.entries_layout | default: 'list' %}-->
-<!--<div class="entries-{{ entries_layout }}">-->
-<!--  {% for post in posts %}-->
-<!--    {% include archive-single.html type=entries_layout %}-->
+<!--<div class="entries-list">-->
+<!--  {% for post in posts limit:3 %}-->
+<!--    {% include post-single.html %}-->
 <!--  {% endfor %}-->
 <!--</div>-->
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+<div class="entries-{{ entries_layout }}">
+  {% for post in posts %}
+    {% include archive-single.html type=entries_layout %}
+  {% endfor %}
+</div>
 
 {% include paginator.html %}
